objects/WT_Assistant_Lookup__c.object
<CustomObject>
    <description>This object has user lookup which has the details of Loan Assistant who works for Load Officer.</description>
    <fields>
        <fullName>WT_Assisting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assisting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assistant_Lookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Assisting_Workstream__c</fullName>
        <label>Assisting Workstream</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_User_To_Assist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User To Assist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assistant_Lookups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assistant Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Assistant Lookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assistant Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>